# ContentiousTermsLOD

./: .gitignore  CI_close_match_query_terms.json  CI_query_terms_related_match.json  CI_with_results.json  ContentiousTermsLOD.bib  LICENSE  LODlit_parser.ipynb  LODlit_parser_debugging.ipynb  README.md  RQ1.ipynb  aat_cs_tfidf_en.csv  aat_en_cs.csv  aat_en_mean_cs.csv  aat_flags_count.csv  aat_nl_mean_cs.csv  aat_spacy_sim_experiment.csv  aat_spacy_sim_experiment.textClipping  additional_annotation_aat_en.csv  additional_annotation_aat_nl.csv  additional_annotation_odwn.csv  additional_annotation_pwn.csv  additional_annotation_wd_en.csv  additional_annotation_wd_nl.csv  annotated_wd_en.csv  annotation_sheet_aat_en.csv  annotation_sheet_aat_en.numbers  annotation_sheet_aat_nl.csv  annotation_sheet_merged_nl.csv  annotation_sheet_odwn_nl.csv  annotation_sheet_pwn_en.csv  annotation_sheet_wikidata_en.csv  annotation_sheet_wikidata_en_old.csv  annotation_sheet_wikidata_nl.csv  annotations1_wd_en.csv  appendix_bar_charts.ipynb  check_eval.ipynb  checking_len_descr.ipynb  checking_mean_cs.ipynb  checking_top10.csv  close_matches_test_evaluation.csv  (+71 more)
.ipynb_checkpoints/: LODlit_parser-checkpoint.ipynb  evaluation_related_match-checkpoint.ipynb  getting_query_terms-checkpoint.ipynb  getting_word_forms-checkpoint.ipynb
AAT/: aat_bows.ipynb  aat_bows_en.json  (+29 more)
LODlit_package/: README.md  pyproject.toml  setup.py
LODlit_package/src/LODlit/: aat.py  bows.py  odwn.py  pwn31.py  wd.py
LODlit_package/src/LODlit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+437 files in other folders)
